samples/_failures_safe/1761593357_7b765e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8334ae13.c: In function ‘main’:
./samples/SAFE/__tmp_8334ae13.c:150:9: error: expected identifier or ‘(’ at end of input
  150 |         int
      |         ^~~
./samples/SAFE/__tmp_8334ae13.c:150:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8334ae13.c:150:9: error: expected declaration or statement at end of input
